# blueprint

./: .gitignore  .pylintrc  README.md  blueprint.py  pyproject.toml
.github/: dependabot.yml
_templates/: test.template
